cms/kubernetes-manifests/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms
spec:
  replicas: 2
  template:
    spec:
      serviceAccountName: cms
