cms/kubernetes-manifests/prod/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: cms
spec:
  hostnames:
  - example.com # will be replaced by cms-config.data.HTTP_ROUTE_HOSTNAME
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external-http
    namespace: infra-resources
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: cms
      port: 1337
    matches:
    - path:
        type: PathPrefix
        value: /cms
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
